src/objects/Employee_3__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <label>EmployeeID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employees 3</relationshipLabel>
        <relationshipName>Employees_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueField__c</fullName>
        <description>This will contain the copy of lookup field.</description>
        <label>UniqueField</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employee 3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees 3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>